# 5-day-gen-ai

./: .gitignore  LICENSE  Makefile  README.md  environment.yml  pyproject.toml
day_1/: foundational_large_language_models.md  prompt_engineering.md  prompting.ipynb
day_2/: classification.ipynb  rag.ipynb
day_3/: function_calling.ipynb  langgraph_agent.ipynb
day_4/: fine_tuning_custom_model.ipynb
