[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "5-day-gen-ai"
version = "0.0.1"
description = "Google's 5 day generative ai course"
readme = "README.md"
requires-python = ">=3.10"

[tool.ruff]
line-length = 120
indent-width = 4

[tool.ruff.format]
indent-style = "space"
quote-style = "double"
